minor fix to align items on the personal page

--- a/src/components/Wrapper/Main/Main.scss
+++ b/src/components/Wrapper/Main/Main.scss
@@ -107,6 +107,7 @@
   }
 
   &--personal {
+    align-items: center;
     .Main__figure {
       margin: 10px;
       width: 30%;
